@@ -4,7 +4,7 @@
 \alias{exportImage}
 \title{Export Image}
 \usage{
-exportImage(filename = NULL, type = NULL, resolution = NULL,
+exportImage(filename = NULL, type = "PNG", resolution = NULL,
   units = NULL, height = NULL, width = NULL, zoom = NULL,
   network = NULL, base.url = .defaultBaseUrl)
 }
@@ -14,7 +14,8 @@ working directory, in addition to the name of the file. Extension is
 automatically added based on the \code{type} argument. If blank, the current
 network name will be used.}
 
-\item{type}{(\code{character}) Type of image to export, e.g., JPEG, PDF, PNG, PostScript, SVG (case sensitive).}
+\item{type}{(\code{character}) Type of image to export, e.g., JPEG, PDF, 
+PNG (default), PostScript, SVG. All types are case sensitive.}
 
 \item{resolution}{(\code{numeric}) The resolution of the exported image, in DPI. Valid 
 only for bitmap formats, when the selected width and height 'units' is inches. The 
